<resources>
    <string name="app_name">KazRoadLab</string>
    <string name="warning">Внимание! После нажатия кнопки \"Сохранить\" изменение подписи будет невозможно.</string>
    <string name="list_departures">Список выездов</string>
    <string name="active_task">Акты выполненных работ</string>
    <string name="create_new_departure">Создать новый выезд</string>
    <string name="load_departure">Загрузить акт выполненных работ</string>
    <string name="synchronization">Cинхронизация</string>
    <string name="create_new_act">Создать акт выполненных работ</string>
    <string name="scanning">Сканирование документов</string>
    <string name="qr_code_load_acts_msg">Отсканируйте QR-код</string>
    <string name="qr_auth_msg">Отсканируйте QR-код для авторизации</string>
    <string name="last_time_sync">Время последней синхронизация</string>
    <string name="text_qr_activity">Наведите камеру на QR код чтобы загрузить выезд</string>
    <string name="load_new_departure">Новый выезд загружен</string>
    <string name="fail_load_new_departure">Не удалось загрузить выезд</string>
    <string name="fail_load_new_departure_is_true">Данный выезд уже загружен</string>
    <string name="departuresIn">Выезды на</string>
    <string name="act_number">Акт номер</string>
    <string name="update">Обновление приложения</string>
    <string name="qr_scan_fail">Не удалось считать QR-код</string>
    <string name="qr_scan_error">Отсканирован некорректный QR-код</string>
    <string name="act">Акт выполненных работ</string>
    <string name="exit">Выход</string>
    <string name="logout">Смена пользователя</string>
    <string name="name_dcm">Наименование ДСМ</string>
    <string name="count">Количество</string>
    <string name="size">Объем (м<sup>3</sup>, тн, h, кг, шт)</string>
    <string name="place">Место отбора</string>
    <string name="provider">Поставщик</string>
    <string name="typeWork">Для каких видов работ</string>
    <string name="save">Сохранить</string>
    <string name="saveAddNew">Сохранить и Добавить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="editAddNew">Редактировать и Добавить новую</string>
    <string name="fail_add_new_prob">Не удалось добавить новую пробу</string>
    <string name="fail_edit_prob">Не удалось редактировать новую пробу</string>
    <string name="field_filds">Заполните все поля</string>
    <string name="name_def">Дефект</string>
    <string name="name_zamera">Замер</string>
    <string name="kilo_def">Киллометраж</string>
    <string name="coment_def">Комментарий</string>
    <string name="name_company">Название компании</string>
    <string name="rang">Должность</string>
    <string name="fio">ФИО</string>
    <string name="erase">Стереть</string>
    <string name="preference_file_key">settings</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_document_scanner">Сканер документов</string>
    <string name="scanningToast">Поиск документа\nНажмите еще раз, чтобы сфотографировать все</string>
    <string name="colorMode">Настройка цвета</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Автоматический режим</string>
    <string name="manualMode">Ручной режим</string>
    <string name="filterModeOn">Улучшение изображения включено</string>
    <string name="filterModeOff">Улучшение изображения включено</string>
    <string name="scanActivity">Отсканированные документы</string>
    <string name="scanButton">Загрузить документы</string>
    <string name="ok">OK</string>
    <string name="bscan"> </string>
    <string name="bdoc"> </string>
    <string name="cancel">Отмена</string>
    <string name="makeBW">Сделать ЧБ</string>
    <string name="makeOrig">Оригинал</string>
    <string name="confirmLoadScan">Вы отсканировали все акты и хотите их загрузить?</string>
    <string name="title_activity_qrauth">QRAuth</string>
    <string name="instr_step1">1.На сайте KazRoadLab, после авторизации, в пользовательском меню необходимо выбрать пункт "Моя страница".</string>
    <string name="instr_step2">2.В открывшемся окне отсканировать QR-код. Сканер откроется после нажатия кнопки "Продолжить" в конце этой инструкции.</string>
    <string name="continueText">Продолжить</string>
    <string name="instr_title">Инструкция по авторизации</string>
    <string name="title_activity_measurment">MeasurmentActivity</string>
    <string name="title_activity_helper">HelperActivity</string>
    <string name="untilSigns">Кнопка закрыть акт будет недоступна, пока все присутствующие не поставят подпись</string>
    <string name="title_activity_new_act">NewActActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_act">CreateActActivity</string>
</resources>
