<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gosproj.gosproject.ProbaActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />


    <com.gosproj.gosproject.Views.CustomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:id="@+id/neasted"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:padding="16dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.github.gcacace.signaturepad.views.SignaturePad
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/paint"
                    android:layout_width="320dp"
                    android:layout_height="200dp"
                    app:penMaxWidth="4dp"
                    app:penMinWidth="1.5dp"
                    app:penColor="@android:color/black"
                    />
                <!--<com.gosproj.gosproject.Views.PaintView
                    android:layout_width="320dp"
                    android:layout_height="200dp"
                    android:id="@+id/paint"
                    android:background="@color/transparent"
                    android:layout_gravity="center" />-->

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/accent"
                    android:layout_alignTop="@id/paint"
                    android:layout_alignRight="@id/paint"
                    android:layout_alignLeft="@id/paint"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/accent"
                    android:layout_alignRight="@id/paint"
                    android:layout_alignBottom="@id/paint"
                    android:layout_alignTop="@id/paint"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/accent"
                    android:layout_alignRight="@id/paint"
                    android:layout_alignBottom="@id/paint"
                    android:layout_alignLeft="@id/paint"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:background="@color/accent"
                    android:layout_alignLeft="@id/paint"
                    android:layout_alignBottom="@id/paint"
                    android:layout_alignTop="@id/paint"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:id="@+id/buttonErase">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_delete_black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/erase"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Подрядчик"
                    android:backgroundTint="@color/accent"
                    android:buttonTint="@color/accent"
                    android:id="@+id/provider"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Заказчик"
                    android:backgroundTint="@color/accent"
                    android:buttonTint="@color/accent"
                    android:id="@+id/customer"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Инженерная служба"
                    android:backgroundTint="@color/accent"
                    android:buttonTint="@color/accent"
                    android:id="@+id/eng_service"/>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_company"
                    android:theme="@style/EditTextTheme"
                    android:textColorHint="#9E9E9E"
                    android:textColor="#717171"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_text_rang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rang"
                    android:theme="@style/EditTextTheme"
                    android:textColorHint="#9E9E9E"
                    android:textColor="#717171"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_text_fio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fio"
                    android:theme="@style/EditTextTheme"
                    android:inputType="text"
                    android:textColorHint="#9E9E9E"
                    android:textColor="#717171" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/save"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </com.gosproj.gosproject.Views.CustomScrollView>

</RelativeLayout>
